--- a/truck/index.html
+++ b/truck/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>truck</title>
+    <script src="index.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800; 0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1 ,400;1500;1700;1900 &display=swap" rel="таблица стилей">
 </head>
@@ -57,8 +58,23 @@
                 </div>
             </div>
     </header>
-    <section>
-        
+    <section class="section1">
+        <div class="container">
+            <div class="swiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="images/Rectangle 451 (1).png" alt="asd"></div>
+      <div class="swiper-slide"><img src="images/Rectangle 451 (2).png" alt="asd"></div>
+      <div class="swiper-slide"><img src="images/Rectangle 451.png" alt="asd"></div>
+      <div class="swiper-slide"><img src="images/Rectangle 451 (1).png" alt="asd"></div>
+    </div>
+    <div class="swiper-button-next"><button><img src="images/strelkaR.svg" alt="r"></button></div>
+    <div class="swiper-button-prev"><button><img src="images/strelkaL.svg" alt="l"></button></div>
+  </div>
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+</div>
+
     </section>
 </body>
 </html>
