--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>truck</title>
-    <script src="index.js" defer></script>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https: //fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800; 0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1 ,400;1500;1700;1900 &display=swap" rel="таблица стилей">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
@@ -58,23 +58,83 @@
                 </div>
             </div>
     </header>
-    <section class="section1">
+    <section class="about">
         <div class="container">
-            <div class="swiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="images/Rectangle 451 (1).png" alt="asd"></div>
-      <div class="swiper-slide"><img src="images/Rectangle 451 (2).png" alt="asd"></div>
-      <div class="swiper-slide"><img src="images/Rectangle 451.png" alt="asd"></div>
-      <div class="swiper-slide"><img src="images/Rectangle 451 (1).png" alt="asd"></div>
-    </div>
-    <div class="swiper-button-next"><button><img src="images/strelkaR.svg" alt="r"></button></div>
-    <div class="swiper-button-prev"><button><img src="images/strelkaL.svg" alt="l"></button></div>
-  </div>
-
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-</div>
-
+            <div class="slider">
+                <div class="swiper truck">
+                <div class="swiper-wrapper">
+                <div class="swiper-slide truck-slide">
+                    <div class="bac"></div>
+                    <button class="search">
+                        <img src="images/lupe.svg" alt="search">
+                    </button>
+                    <button class="more">
+                        <p>Подробнее</p>
+                        <img src="images/more.svg" alt="more">
+                    </button>
+                </div>
+                <div class="swiper-slide truck-slide">
+                    <div class="bac2"></div>
+                    <button class="search">
+                        <img src="images/lupe.svg" alt="search">
+                    </button>
+                    <button class="more">
+                        <p>Подробнее</p>
+                        <img src="images/more.svg" alt="more">
+                    </button>
+                </div>
+                <div class="swiper-slide truck-slide">
+                    <div class="bac3"></div>
+                    <button class="search">
+                        <img src="images/lupe.svg" alt="search">
+                    </button>
+                    <button class="more">
+                        <p>Подробнее</p>
+                        <img src="images/more.svg" alt="more">
+                    </button>
+                </div>
+                <div class="swiper-slide truck-slide">
+                    <div class="bac4"></div>
+                    <button class="search">
+                        <img src="images/lupe.svg" alt="search">
+                    </button>
+                    <button class="more">
+                        <p>Подробнее</p>
+                        <img src="images/more.svg" alt="more">
+                    </button>
+                </div>
+                <div class="swiper-slide truck-slide">
+                    <div class="bac5"></div>
+                    <button class="search">
+                        <img src="images/lupe.svg" alt="search">
+                    </button>
+                    <button class="more">
+                        <p>Подробнее</p>
+                        <img src="images/more.svg" alt="more">
+                    </button>
+                </div>
+                <div class="swiper-slide truck-slide">
+                    <div class="bac6"></div>
+                    <button class="search">
+                        <img src="images/lupe.svg" alt="search">
+                    </button>
+                    <button class="more">
+                        <p>Подробнее</p>
+                        <img src="images/more.svg" alt="more">
+                    </button>
+                </div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor. Placerat vestibulum lectus mauris ultrices eros in cursus turpis massa.</p>
+        </div>
+            
+        </div>
     </section>
+
+
+    <script src="index.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </body>
 </html>
