--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,71 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A385f4c0253ccf32fa478e161206443086292d0063b281a0c47ae2cb22de36030&amp;width=100%25&amp;height=700&amp;lang=ru_RU&amp;scroll=false"></script>
 </section>
+<footer>
+    <img class="mazok4" src="images/mazok4.png" alt="">
+    <div class="container">
+        <div class="footer-top">
+            <img src="images/Logo.svg" alt="logo">
+            <div class="fot-r">
+                <p>
+                    Присоединяйтесь:
+                </p>
+                <button>
+                    <img src="images/fase.svg" alt="facebook">
+                </button>
+            </div>
+        </div>
+        <img src="images/line (1).svg" alt="line">
+        <div class="foot-c">
+            <div class="f-left">
+                <h3>
+                    О нас
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <a href="#">Подробнее</a>
+            </div>
+            <div class="f-cen">
+                <h3>
+                    Контакты
+                </h3>
+                <ul>
+                    <li>
+                        <p class="p1">Позвоните:</p><a href="tel:+79268048183">+7 (926) 804 81 83</a>
+                    </li>
+                    <li>
+                        <p class="p2">Напишите:</p><a href="#">mail@mail.com</a>
+                    </li>
+                    <li>
+                        <p class="p3">Приезжайте:</p><a href="#">г. Домодедово, ул. Логистическая д. 1</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="f-rag">
+                <h3>
+                    Рабочее время
+                </h3>
+                <p>Круглосуточно —<span> 24/7</span></p>
+            </div>
+            <img src="images/elements.png" alt="el">
+        </div>
+        
+    </div>
+    <div class="foot-d">
+        <div class="container">
+            <a href="#">Политика конфиденциальности</a>
+            <p>
+                © clean-track, 2021
+            </p>
+            <button class="bot_up">
+                Наверх
+            </button>
+        </div>
+        </div>
+</footer>
 
 
 
