--- a/index.html
+++ b/index.html
@@ -1127,8 +1127,7 @@
        <button class="modal__close-button"><img src="images/Union.svg" alt="k"></button>
     </div>
  </div>
-
-
+<div class="ds"></div>
 
 
 
