--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
                                                 Заголовокds преимуществ
                                             </h3>
                                             <ul>
-                                                <li><img src="images/gal.svg" alt="gal"> <p>卐卐卐卐卐卐卐卐</p></li>
+                                                <li><img src="images/gal.svg" alt="gal"> <p>випаяпми</p></li>
                                                 <li><img src="images/gal.svg" alt="gal"> <p>Преимущество номер два</p></li>
                                                 <li><img src="images/gal.svg" alt="gal"> <p>Преимущество номер три</p></li>
                                                 <li><img src="images/kre.svg" alt="gal"> <p>Преимущество номер четыре</p></li>
